prg corrections, toolbar, logo

--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -27,8 +27,7 @@
           background-position: center
           background-size: cover
         .toolbar_front
-          background-color: $color1
-          opacity: 0.7
+          background-color: $color1_rgb
           z-index: 1
           position: absolute
           width: 100%
@@ -45,15 +44,14 @@
           ul  
             li
               display: block !important
-              height: 20px !important
-              margin-left: 18px
+              height: 22px !important
+              margin-left: 13px
+              width: 167px
               a
                 @include infoUser
-                color: white
-                font-size: 14px
                 text-align: left
         .profile
-          opacity: 0.54
+     
 
           
         .toolbar_back
