--- a/app/assets/stylesheets/city/binakuru/variables.scss
+++ b/app/assets/stylesheets/city/binakuru/variables.scss
@@ -5,6 +5,7 @@ $color2: 									rgba(192, 115, 19, 1);
 $color3:									#20170d;
 $bodyBackground:          #f9f9f9;
 $color2_rgb:              rgba(192, 115, 19, 0.85);
+$color1_rgb:              rgba(13, 165, 145, 0.75);
 
 
 // typography
