--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -7,8 +7,8 @@
   background-color: white
   .place_left
     float: left
-    width: 71% 
-    height: 335px
+    width: 66.2% 
+    height: 405px
     position: relative
 
     .info_photo
@@ -23,18 +23,18 @@
       width: 100%
 
   .PRG_information
-    width: 29%
+    width: 33.7%
     display: block
     float: right
     background-color: white
     .btn-add
-      margin-left: 20%
+      margin-left: 23%
       margin-top: 10px
       float: right
       z-index: 1
       position: absolute
     .prg_stars
-      margin-top: 25px 
+      margin-top: 20px 
       margin-left: auto
       margin-right: auto
       width: 116px
@@ -82,21 +82,14 @@
     .info 
       text-align: left
       padding-top: 40px
-      padding-right: 10px
+      padding-right: 25px
       padding-left: 32px
       padding-bottom: 10px
-    .title_route
-   
-        
- 
-    .title_place
- 
-
     .title_prg
       background-color: #0DA592
       border-radius: 100px 
       height: 200px
-      margin-left: 15%
+      margin-left: 18%
       margin-right: auto
       margin-top: 20px
       text-align: center
@@ -116,7 +109,7 @@
 
         
 .PRG_description
-  width: 68%
+  width: 66.2%
   background-color: white
   margin-bottom: 24px
   padding-bottom: 10px
@@ -142,10 +135,10 @@
     textarea
       height: 20px  
 .related
-  width: 29%
+  width: 31.88%
   float: right
   margin-top: -17px
-  p 
+  p.sections 
     @include section
     text-align: center
     padding-top: 5px
