--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -76,4 +76,42 @@
         text-align: center 
       input
         @include center-block
-        
+#interest_points
+  width: 68.12%
+  margin-left: 0px
+  display: inline-block
+  float: left
+  position: relative
+  .checkbox-menu
+    margin-bottom: -20px
+    float: right
+    margin-right: 60px
+    label
+      display: inline-block
+    input[type=checkbox]
+      display: none
+    input[type=checkbox] + label
+      background: #fff
+      display: inline-block
+      width: 85px
+      height: 24px
+      background: url(ico/checkedoff.png) 0px 0px no-repeat
+      text-indent: 25px
+    input[type=checkbox]:checked + label
+      background: url(ico/checked.png) 0px 0px no-repeat
+  .content-checkbox
+    display: inline-block
+    float: left
+    @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
+    .content_guides
+      display: inline-block
+      ul
+        margin: 0px
+    .content_routes
+      display: inline-block
+      ul
+        margin: 0px
+    .content_places
+      display: inline-block
+      ul
+        margin: 0px
