--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -109,12 +109,18 @@
 
 
 .btn_map
-  margin-top: 10px 
-  background-color: $color1
-  border-radius: 5px
+  background-color: #0DA592
   border-color: transparent
+  border-radius: 5px 5px 5px 5px
+  height: 24px
+  margin-top: 10px
+  width: 93px
   @include mapMode
-
+  width: 64px
+  a 
+    color: white
+    padding-left: 10px
+    padding-right: 10px
   
 
 
