--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -29,7 +29,7 @@
     background-color: white
     .btn-add
       margin-left: 23%
-      margin-top: 10px
+      margin-top: 16px
       float: right
       z-index: 1
       position: absolute
@@ -122,9 +122,8 @@
     @include normalText
     padding-right: 40px
     padding-left: 20px
-    .btn-
 .coment-social
-  width: 68%  
+  width: 66.2%  
   display: inline-block
   background-color: white
   .comments
@@ -196,18 +195,12 @@
       position: absolute
       width: 0
       z-index: 1
-
-       
-
-.change_mode
-  width: 71%
-  text-align: center
-  a 
-    @include mapMode
 #prg_routes
   height: 100px
   width: 100%
   ul.thumbnails
     li
       display: inline-block
-
+.map_prg
+  margin-right: auto
+  margin-left: 26%
