--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -50,7 +50,7 @@
       <%= render :partial => "routes/small_item" %>
     </ul>
 </div>
-  <div class="change_mode"><a href="">map mode</a></div>
+  <div class="btn_map map_prg"><a href="">map mode</a></div>
 
 
 
