--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -39,7 +39,7 @@
         </div> 
         </div>     
     </div>
-    <div class="change_mode"><a href="">map mode</a></div>
+    <div class="btn_map map_prg"><a href="">map mode</a></div>
     <div class="related">
       <p class="sections">related events</p>
       <div class="related_events related_all">
