some changes prg

--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -148,7 +148,7 @@
   .related_photos
     padding-bottom: 10px
     ul 
-      margin-left: 11%
+      margin-left: 13.5%
       li
         display: inline-block
         width: 100px
@@ -168,6 +168,11 @@
       height: 200px
       margin-left: 9%
       width: 87%
+      @include eventCalendar_num
+      tr
+        th 
+          margin-right: 20px
+          text-align: left
     .highlight_events
 
   .related_videos
@@ -179,7 +184,7 @@
     ul
       li 
         img
-          margin-left: 3%
+          margin-left: 4.5%
           margin-top: 2%
           position: absolute
           width: 150px
@@ -190,7 +195,7 @@
       border-left: 20px solid $color1
       border-top: 10px solid transparent
       height: 0
-      margin-left: 11%
+      margin-left: 12.5%
       margin-top: 7%
       position: absolute
       width: 0
