--- a/app/assets/stylesheets/city/binakuru/trips.css.sass
+++ b/app/assets/stylesheets/city/binakuru/trips.css.sass
@@ -1,4 +1,5 @@
-#trips
+#trips,
+#frontpage
   #info_city
     @include grid-fluid-span(12, $fluidGridColumnWidth, $fluidGridGutterWidth)
     height: 360px
