--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -29,3 +29,8 @@ body
   background-image: url(toledo2.jpg) 
   background-position: center
   background-size: cover
+
+.left8
+  width: 68.12%
+.right4
+  width: 31.88%
