--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -30,7 +30,7 @@ body
   background-position: center
   background-size: cover
 
-.left8
+.content-left
   width: 68.12%
-.right4
+.content-right
   width: 31.88%
