--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -7,7 +7,7 @@ body
   background-color: $bodyBackground
   .wrapper
     width: 969px
-    background-image: url('guia-01.png')
+    //background-image: url('guia-01.png')
     background-repeat: repeat-y
     a
       text-decoration: none
