--- a/app/views/trips/_interest_points.html.erb
+++ b/app/views/trips/_interest_points.html.erb
@@ -1,5 +1,5 @@
 
-  <button class="btn">view on the map</button>
+  <!--button class="btn">view on the map</button-->
   <div class="checkbox-menu">
 
     <input type="checkbox" name="check_01" id="checkGuides" checked onchange="javascript:showContentGuides()" />
