--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -47,7 +47,9 @@
 
 <div id="prg_small">
     <ul class="thumbnails">
-      <%= render :partial => "routes/small_item" %>
+      <% @route.places.each do |p| %>
+        <%= render :partial => "guides/small_item", :locals => {:place => p} %>
+      <% end %>
     </ul>
 </div>
   <div class="btn_map map_prg"><a href="">map mode</a></div>
