--- a/app/views/toolbar/_diaries.html.erb
+++ b/app/views/toolbar/_diaries.html.erb
@@ -1,4 +1,4 @@
-<section id="toolbar_profile" class="">
+<section class"toolbar_profile" class="">
   <div class="toolbar_content">
     <ul>
       <li class="diaries">
@@ -26,7 +26,7 @@
       </li>
       <li class="diaries">    
         <div class="toolbar_front">
-          <a href="">name</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -36,7 +36,7 @@
       </li>
       <li class="diaries">
         <div class="toolbar_front">
-          <a href="">profile</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -46,7 +46,7 @@
       <%# if current_subject.present? && subject != current_subject %>
         <li class="diaries">
           <div class="toolbar_front">
-            <a href="">profile</a>
+            <a href="">empty</a>
           </div>
           <div class="toolbar_back">
           </div>
@@ -57,7 +57,7 @@
       <%# end %>
       <li class="diaries">
         <div class="toolbar_front">
-          <a href="">profile</a>
+          <a href="">empty</a>
         </div>
         <div class="toolbar_back">
         </div>
@@ -69,7 +69,7 @@
       <%# if SocialStream.repository_models.present? %>
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
           <%#= link_to [ subject, :repository ], class: "btn-blue"  do %>
@@ -80,13 +80,13 @@
 
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
         </li>
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">messages</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
         </li>       
