--- a/app/views/toolbar/_plannings.html.erb
+++ b/app/views/toolbar/_plannings.html.erb
@@ -1,4 +1,4 @@
-<section id="toolbar_profile" class="">
+<section class="toolbar_profile" class="">
   <div class="toolbar_content">
     <ul>
       <li class="diaries">
@@ -86,7 +86,7 @@
         </li>
         <li class="diaries">
             <div class="toolbar_front">
-              <a href="">mempty</a>
+              <a href="">empty</a>
             </div>
             <div class="toolbar_back"></div>
         </li>       
