--- a/app/assets/stylesheets/city/binakuru/mixins.css.sass
+++ b/app/assets/stylesheets/city/binakuru/mixins.css.sass
@@ -33,7 +33,7 @@
 @mixin info
   font-family: $LatoLight
   font-size: 14px
-  color: grey
+  color: #71706D
 @mixin view
   font-family: $LatoLight
   font-size: 16px
