--- a/app/assets/stylesheets/city/binakuru/places.css.sass
+++ b/app/assets/stylesheets/city/binakuru/places.css.sass
@@ -55,6 +55,7 @@
             position: absolute
             top: 1px
             transform: rotate(-70deg)
+            -webkit-transform: rotate(-70deg)
             width: 0
           .star:before 
             border-bottom: 8px solid $color2
@@ -67,6 +68,7 @@
             position: absolute
             top: -4.5px
             transform: rotate(-35deg)
+            -webkit-transform: rotate(-35deg)
             width: 0
           .star
             border-bottom: 8px solid $color2
@@ -78,6 +80,7 @@
             margin: 5px 0
             position: relative
             transform: rotate(35deg)
+            -webkit-transform: rotate(35deg)
             width: 0
     .info 
       text-align: left
@@ -85,6 +88,7 @@
       padding-right: 25px
       padding-left: 32px
       padding-bottom: 10px
+      @include info
     .title_prg
       background-color: #0DA592
       border-radius: 100px 
@@ -181,6 +185,7 @@
     height: 200px
     width: 100%
     background-color: white
+    position: relative
     ul
       li 
         img
@@ -190,6 +195,15 @@
           width: 150px
           z-index: 0
           opacity: 0.7
+    .video
+      margin-left: auto
+      margin-right: auto
+      margin-top: 2%
+      opacity: 0.7
+      width: 250px
+      display: block
+      &:hover
+        opacity: 1
     .play_icon
       border-bottom: 10px solid transparent
       border-left: 20px solid $color1
@@ -207,5 +221,8 @@
     li
       display: inline-block
 .map_prg
-  margin-right: auto
+
   margin-left: 26%
+.section_contents
+  margin-left: 47%
+  @include section
