--- a/app/assets/stylesheets/city/binakuru/toolbar.css.sass
+++ b/app/assets/stylesheets/city/binakuru/toolbar.css.sass
@@ -51,7 +51,8 @@
                 @include infoUser
                 text-align: left
         .profile
-     
+          background-color: $color1
+          opacity: 0.50
 
           
         .toolbar_back
