--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -60,11 +60,7 @@
       
       <p class="sections">related videos</p>
       <div class="related_videos related_all">
-        <% related = @place.photos.sample(3) %>
-        <ul>
-          <li><%= thumb_for(related[0], 'thumb100sq') %></li>
-        </ul>
-        <div class="play_icon"></div>
+        <div class="video"><iframe width="250" height="188" src="http://www.youtube.com/embed/fSi_08eRGiI" frameborder="0" allowfullscreen></iframe></div>
       </div>
     </div>
     <div class="PRG_description">
