--- a/app/views/routes/_info.html.erb
+++ b/app/views/routes/_info.html.erb
@@ -1,4 +1,4 @@
-<div class="details">
+<div class="info">
   <h4>This is a guide from <%= @route.trip.title %> trip</h4>
   <!-- <div class="info">
     <div class="cover">
