--- a/app/views/toolbar/_logo.html.erb
+++ b/app/views/toolbar/_logo.html.erb
@@ -3,7 +3,7 @@
 
     <%= link_to image_tag(subject.logo.url(:medium), :alt => subject.name , :size => "150x150", :id => "current_avatar_img"), subject %>    
     <div class="logo_menu logo_caption">    
-      <%= link_to t('avatar.profile_change'), polymorphic_path([subject, :profile], section: :avatar)  %>       
+      <%#= link_to t('avatar.profile_change'), polymorphic_path([subject, :profile], section: :avatar)  %>       
     </div>        
   <% else %>
     <%= link_to image_tag(subject.logo.url, :alt => subject.name , :size => "150x150"), subject %>
