Fix phototrip size

--- a/app/views/diaries/_photo.html.erb
+++ b/app/views/diaries/_photo.html.erb
@@ -1,3 +1,3 @@
-<iframe class="photoiframe" name="photoiframe" src="/phototrip.html" >
+<iframe class="photoiframe" name="photoiframe" src="/phototrip.html" style="width:963px; height:640px; border:0;" >
 
 </iframe>
