--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -29,3 +29,10 @@ body
   background-image: url(toledo2.jpg) 
   background-position: center
   background-size: cover
+footer
+  
+  .f1
+    margin-left: 115px
+    margin-top: 70px
+  .f2
+    margin-left: 165px
