--- a/app/views/frontpage/_map_frontpage.html.erb
+++ b/app/views/frontpage/_map_frontpage.html.erb
@@ -15,6 +15,27 @@
       <a class="inspire_front">inspire</a>
 
     </div>
+
+
+
+    <div class="trip_Z">
+      
+    </div>
+
+     <div class="trip_x">
+      
+    </div>
+
+     <div class="trip_y">
+      
+    </div>
+
+     <div class="trip_w">
+      
+    </div>
+
+
+
     <div class="search-inspire">
 
       <p class="front-text">where do you want to go?</p>
