--- a/app/views/frontpage/_users_frontpage.html.erb
+++ b/app/views/frontpage/_users_frontpage.html.erb
@@ -1,6 +1,9 @@
 <div id="users">
+  <div class="top_travelers">
 
-  <p>top travelers</p>
+    <p class="topt">top travellers</p>
+
+  </div>
  
   <div class="users_front_list">
 
@@ -18,6 +21,10 @@
 
     </ul>
   
+  </div>
+  <div class="app_front">
+    
+    <%= link_to(image_tag('movil.jpg')) %>
   </div>
   
 </div>
