--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="f1">
       <ul>
-        <li><%= Date.today.year %> © </li>
-        <li id="trade_mark"><%= link_to t('site.name'), 'http://social-stream.dit.upm.es/' %></li>
+        <li><%= Date.today.year %> © <%= link_to t('site.name'), 'http://social-stream.dit.upm.es/' %></li>
+        
       </ul>
     </div>
     <div class="f2">
