--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -46,7 +46,7 @@
 
 
 <div id="prg_small">
-    <p class="section_contents">guide contents</p>
+    <p class="section_contents">route contents</p>
     <ul class="thumbnails">
       <% @route.places.each do |p| %>
         <%= render :partial => "guides/small_item", :locals => {:place => p} %>
