--- a/app/views/toolbar/_diaries.html.erb
+++ b/app/views/toolbar/_diaries.html.erb
@@ -1,11 +1,11 @@
-<section class"toolbar_profile" class="">
+<section class="toolbar_profile" class="">
   <div class="toolbar_content">
     <ul>
       <li class="diaries">
-        <div class="toolbar_front">
-          <a href="">Vacation 2012 Madrid</a>
+        <div class="toolbar_front ">
+          <a href="">Toledo Oct13</a>
         </div>
-        <div class="toolbar_back">
+        <div class="toolbar_back toolbar_diaries">
         </div>
   <!--       <div class="user">
           <%#= render partial: 'toolbar/logo',
