--- a/app/views/users/_diaries-guides.html.erb
+++ b/app/views/users/_diaries-guides.html.erb
@@ -1,11 +1,12 @@
 <div id="content_profile" class="grid-3_center">
   <div class="trip_content">
-    <p class="section">diaries / guides</p>
+    <p class="section">plannings / diaries</p>
     <ul class="trips">
       <li class="plannings imageProfile">
         <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica"> -->
-          <div class="caption_img">
+            <img src="/assets/toledo3.jpg" alt="Toledo_basica">
+          <div class="caption_img vAlign">
+            <p> P </p>
           </div>
         </div>
       </li>
@@ -13,8 +14,9 @@
       <li class="diaries imageProfile" >
         <a href="/diaries/1">
           <div class="diary_item">
-           <!--  <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
-            <div class="caption_img">
+           <img src="/assets/san_juan.jpg" alt="">
+            <div class="caption_img vAlign">
+              <p> D </p>
             </div>
           </div>
         </a>
@@ -25,8 +27,9 @@
     <ul class="trips">
       <li class="plannings imageProfile">
         <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica"> -->
+          <img src="/assets/london.jpg" alt=""> 
           <div class="caption_img">
+            <p> P </p>
           </div>
         </div>
       </li>
@@ -34,20 +37,21 @@
       <li class="diaries imageProfile" >
         <a href="/diaries/1">
           <div class="diary_item">
-<!--             <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
+            <img src="/assets/lodon2.jpg" alt="Toledo_basica"> 
             <div class="caption_img">
+              <p> D </p>
             </div>
           </div>
         </a>
       </li> 
-      <div class="city"><p>Toledo 2013</p></div>
+      <div class="city"><p>London</p></div>
       <div class="divider"></div>
     </ul>
     <ul class="trips">
-      <li class="plannings imageProfile">
+      <li class="plannings">
         <div class="planning_item">
-<!--           <img src="/assets/toledo_basica.jpg" alt="Toledo_basica">
- -->          <div class="caption_img">
+         <div class="caption_img">
+          <p> P </p>
           </div>
         </div>
       </li>
@@ -55,13 +59,13 @@
       <li class="diaries" >
         <a href="/diaries/1">
           <div class="diary_item">
-<!--             <img src="/assets/san_juan.jpg" alt="Toledo_basica"> -->
             <div class="caption_img">
+              <p> D </p>
             </div>
           </div>
         </a>
       </li> 
-      <div class="city"><p>Toledo 2013</p></div>
+      <div class="city"><p>Fi-Content</p></div>
       <div class="divider">
     </ul>
   </div>
