--- a/app/assets/stylesheets/city/binakuru/layout.css.sass
+++ b/app/assets/stylesheets/city/binakuru/layout.css.sass
@@ -31,8 +31,10 @@ body
   background-size: cover
 
 footer
-  .f1
-    margin-left: 115px
-    margin-top: 70px
-  .f2
-    margin-left: 165px
+  .container
+    width: auto
+    .f1
+      margin-left: 115px
+      margin-top: 70px
+    .f2
+      margin-left: 165px
