--- a/app/views/users/_diaries-guides.html.erb
+++ b/app/views/users/_diaries-guides.html.erb
@@ -3,12 +3,14 @@
     <p class="section">plannings / diaries</p>
     <ul class="trips">
       <li class="plannings imageProfile">
-        <div class="planning_item">
+        <a href="/plannings">
+          <div class="planning_item">
             <img src="/assets/toledo3.jpg" alt="Toledo_basica">
-          <div class="caption_img vAlign">
-            <p> P </p>
+            <div class="caption_img vAlign">
+              <p> P </p>
+            </div>
           </div>
-        </div>
+        </a>
       </li>
 
       <li class="diaries imageProfile" >
@@ -57,7 +59,7 @@
       </li>
 
       <li class="diaries" >
-        <a href="/diaries/1">
+        <a href="/diaries/2">
           <div class="diary_item">
             <div class="caption_img">
               <p> D </p>
