--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -36,7 +36,7 @@
     position: relative
     width: 100%
     height: 550px
-    background: url("mapa-mundo.jpg")
+    background: url("worldmap.jpg")
     .inspire_Z
       z-index: 2
       @include border-top-left-radius(40px)
