--- a/app/assets/stylesheets/city/binakuru/front.css.sass
+++ b/app/assets/stylesheets/city/binakuru/front.css.sass
@@ -33,7 +33,7 @@
 
 
   .front-map
-    background-size: cover
+
     position: relative
     width: 100%
     height: 550px
@@ -141,7 +141,7 @@
         @include view
 
   #users
-    
+    background-color: white
     width: 31.8%
     height: auto
     float: left
@@ -156,6 +156,17 @@
         input
         @include center-block
         margin-top: 15px
+    .app_front
+      .topx
+
+        font-family: $LatoLight
+        font-size: 20px
+        color: $color1
+        text-align: center
+        input
+        @include center-block
+        margin-top: 15px
+
 
     .users_front_list
       
