--- a/app/views/frontpage/_users_frontpage.html.erb
+++ b/app/views/frontpage/_users_frontpage.html.erb
@@ -15,7 +15,8 @@
   
   </div>
   <div class="app_front">
-    
+
+    <p class="topx">dowload app</p>
     <%= link_to(image_tag('movil.jpg')) %>
   </div>
   
